--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
     rel="stylesheet">
+  <link rel="preload" href="./css/style.css" as="style">
+  <link rel="preload" href="./js/main.js" as="script">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -104,9 +106,9 @@
   <div class="hero-wrapper reveal">
     <section class="hero">
       <div class="hero-bg">
-        <img src="./assets/images/hero/slide-1.png" class="hero-slide active" alt="Slide 1">
-        <img src="./assets/images/hero/slide-2.jpg" class="hero-slide" alt="Slide 2">
-        <img src="./assets/images/hero/slide-3.JPG" class="hero-slide" alt="Slide 3">
+        <img src="./assets/images/hero/slide-1.png" class="hero-slide active" alt="Slide 1" loading="eager">
+        <img src="./assets/images/hero/slide-2.jpg" class="hero-slide" alt="Slide 2" loading="lazy">
+        <img src="./assets/images/hero/slide-3.JPG" class="hero-slide" alt="Slide 3" loading="lazy">
       </div>
       <div class="hero-overlay"></div>
       <div class="hero-content reveal">
@@ -256,22 +258,22 @@
       </div>
       <div class="catalog-grid">
         <div class="card reveal delay-1">
-          <div class="card-img"><img src="./assets/images/gallery/g-1.jpg"></div>
+          <div class="card-img"><img src="./assets/images/gallery/g-1.jpg" alt="Gallery Image 1" loading="lazy"></div>
         </div>
         <div class="card reveal delay-2">
-          <div class="card-img"><img src="./assets/images/gallery/g-2.jpg"></div>
+          <div class="card-img"><img src="./assets/images/gallery/g-2.jpg" alt="Gallery Image 2" loading="lazy"></div>
         </div>
         <div class="card reveal delay-3">
-          <div class="card-img"><img src="./assets/images/gallery/g-3.jpg"></div>
+          <div class="card-img"><img src="./assets/images/gallery/g-3.jpg" alt="Gallery Image 3" loading="lazy"></div>
         </div>
         <div class="card reveal delay-1">
-          <div class="card-img"><img src="./assets/images/gallery/g-4.jpg"></div>
+          <div class="card-img"><img src="./assets/images/gallery/g-4.jpg" alt="Gallery Image 4" loading="lazy"></div>
         </div>
         <div class="card reveal delay-2">
-          <div class="card-img"><img src="./assets/images/gallery/g-5.jpg"></div>
+          <div class="card-img"><img src="./assets/images/gallery/g-5.jpg" alt="Gallery Image 5" loading="lazy"></div>
         </div>
         <div class="card reveal delay-3">
-          <div class="card-img"><img src="./assets/images/gallery/g-6.jpg"></div>
+          <div class="card-img"><img src="./assets/images/gallery/g-6.jpg" alt="Gallery Image 6" loading="lazy"></div>
         </div>
       </div>
     </section>
