update ui / fitur / konten

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   <title>COSKIT Group — Cosplay Collective</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -145,59 +143,71 @@
         <p class="section-desc">Kenalan dengan kami berenam.</p>
       </div>
 
-      <div class="team-grid">
-        <div class="team-card reveal delay-1">
-          <div class="team-img">
-            <img src="./assets/images/team/01-ganes.JPEG" alt="KANESUUU_">
-          </div>
-          <div class="team-info">
-            <h4>KANESUUU_</h4>
-            <span>Developer</span>
-          </div>
-        </div>
-        <div class="team-card reveal delay-2">
-          <div class="team-img">
-            <img src="./assets/images/team/02-yonnkun.jpeg" alt="Yonnk0n">
-          </div>
-          <div class="team-info">
-            <h4>Yonnk0n</h4>
-            <span>Statistik</span>
+      <div class="row team-grid">
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="team-card reveal delay-1">
+            <div class="team-img">
+              <img src="./assets/images/team/01-ganes.JPEG" alt="KANESUUU_" loading="lazy" decoding="async">
+            </div>
+            <div class="team-info">
+              <h4>KANESUUU_</h4>
+              <span>Developer</span>
+            </div>
           </div>
         </div>
-        <div class="team-card reveal delay-3">
-          <div class="team-img">
-            <img src="./assets/images/team/03-baim.jpg" alt="Baim">
-          </div>
-          <div class="team-info">
-            <h4>Baim</h4>
-            <span>Specialist: Weaponry</span>
-          </div>
-        </div>
-        <div class="team-card reveal delay-1">
-          <div class="team-img">
-            <img src="./assets/images/team/04-shendy.jpeg" alt="Shendy">
-          </div>
-          <div class="team-info">
-            <h4>ShendyZomo</h4>
-            <span>Desainer</span>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="team-card reveal delay-2">
+            <div class="team-img">
+              <img src="./assets/images/team/02-yonnkun.jpeg" alt="Yonnk0n" loading="lazy" decoding="async">
+            </div>
+            <div class="team-info">
+              <h4>Yonnk0n</h4>
+              <span>Statistik</span>
+            </div>
           </div>
         </div>
-        <div class="team-card reveal delay-2">
-          <div class="team-img">
-            <img src="./assets/images/team/05-andre.jpg" alt="Andre">
-          </div>
-          <div class="team-info">
-            <h4>Andre</h4>
-            <span>Woi Gondrong</span>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="team-card reveal delay-3">
+            <div class="team-img">
+              <img src="./assets/images/team/03-baim.jpg" alt="Baim" loading="lazy" decoding="async">
+            </div>
+            <div class="team-info">
+              <h4>Baim</h4>
+              <span>Specialist: Weaponry</span>
+            </div>
           </div>
         </div>
-        <div class="team-card reveal delay-3">
-          <div class="team-img">
-            <img src="./assets/images/team/06-josep.jpg" alt="Josep">
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="team-card reveal delay-1">
+            <div class="team-img">
+              <img src="./assets/images/team/04-shendy.jpeg" alt="Shendy" loading="lazy" decoding="async">
+            </div>
+            <div class="team-info">
+              <h4>ShendyZomo</h4>
+              <span>Desainer</span>
+            </div>
           </div>
-          <div class="team-info">
-            <h4>Josep</h4>
-            <span>Specialist: Performance</span>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="team-card reveal delay-2">
+            <div class="team-img">
+              <img src="./assets/images/team/05-andre.jpg" alt="Andre" loading="lazy" decoding="async">
+            </div>
+            <div class="team-info">
+              <h4>Andre</h4>
+              <span>Woi Gondrong</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="team-card reveal delay-3">
+            <div class="team-img">
+              <img src="./assets/images/team/06-josep.jpg" alt="Josep">
+            </div>
+            <div class="team-info">
+              <h4>Josep</h4>
+              <span>Specialist: Performance</span>
+            </div>
           </div>
         </div>
       </div>
@@ -254,24 +264,36 @@
         <h2 class="section-title">Dokumentasi Project</h2>
         <p class="section-desc">Arsip foto cosplay yang sudah kami jalani.</p>
       </div>
-      <div class="catalog-grid">
-        <div class="card reveal delay-1">
-          <div class="card-img"><img src="./assets/images/gallery/g-1.jpg" alt="Gallery Image 1" loading="lazy"></div>
+      <div class="row catalog-grid">
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="card reveal delay-1">
+            <div class="card-img"><img src="./assets/images/gallery/g-1.jpg" alt="Gallery Image 1" loading="lazy"></div>
+          </div>
         </div>
-        <div class="card reveal delay-2">
-          <div class="card-img"><img src="./assets/images/gallery/g-2.jpg" alt="Gallery Image 2" loading="lazy"></div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="card reveal delay-2">
+            <div class="card-img"><img src="./assets/images/gallery/g-2.jpg" alt="Gallery Image 2" loading="lazy"></div>
+          </div>
         </div>
-        <div class="card reveal delay-3">
-          <div class="card-img"><img src="./assets/images/gallery/g-3.jpg" alt="Gallery Image 3" loading="lazy"></div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="card reveal delay-3">
+            <div class="card-img"><img src="./assets/images/gallery/g-3.jpg" alt="Gallery Image 3" loading="lazy"></div>
+          </div>
         </div>
-        <div class="card reveal delay-1">
-          <div class="card-img"><img src="./assets/images/gallery/g-4.jpg" alt="Gallery Image 4" loading="lazy"></div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="card reveal delay-1">
+            <div class="card-img"><img src="./assets/images/gallery/g-4.jpg" alt="Gallery Image 4" loading="lazy"></div>
+          </div>
         </div>
-        <div class="card reveal delay-2">
-          <div class="card-img"><img src="./assets/images/gallery/g-5.jpg" alt="Gallery Image 5" loading="lazy"></div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="card reveal delay-2">
+            <div class="card-img"><img src="./assets/images/gallery/g-5.jpg" alt="Gallery Image 5" loading="lazy"></div>
+          </div>
         </div>
-        <div class="card reveal delay-3">
-          <div class="card-img"><img src="./assets/images/gallery/g-6.jpg" alt="Gallery Image 6" loading="lazy"></div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="card reveal delay-3">
+            <div class="card-img"><img src="./assets/images/gallery/g-6.jpg" alt="Gallery Image 6" loading="lazy"></div>
+          </div>
         </div>
       </div>
     </section>
